# nano-paper-agent

./: .gitignore  DATABASE.md  PROJECT.md  README.md  config.json  main.py  pyproject.toml
database/: db_manager.py  schema.sql
embeddings/: __init__.py  embedding_model.py
llm/: __init__.py  llm_interface.py
management/: __init__.py  paper_manager.py
parsers/: pdf_parser.py
rag/: __init__.py  generator.py  retriever.py
ui/: cli.py
utils/: config.py  logger.py
